--- a/index.html
+++ b/index.html
@@ -14,7 +14,34 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
-<body>
+<nav>
+    <!-- Navbar-->
+    <nav id="navbar"></nav>
+        <div class="navbar_log">
+            <i class="fas fa-atlas"></i>
+            <a href="#">SERAN</a>
+        </div>
+        <div class="navbar_menu">
+            <ul class="navbar_menu">
+                <li class="navbar_menu_items">Home</li>
+                <li class="navbar_menu_items">About</li>
+                <li class="navbar_menu_items">Skills</li>
+                <li class="navbar_menu_items">My Work</li>
+                <li class="navbar_menu_items">Testmonial</li>
+                <li class="navbar_menu_items">Contact</li>
+            </ul>  
+        </div>  
+    </nav>
+    <!-- About-->
+    <section id="about"></section>
+    <!-- Skills-->
+    <section id="skills"></section>
+    <!-- Work-->
+    <section id="work"></section>
+    <!-- Testmoials-->
+    <section id="testmoials"></section>
+    <!-- Contact-->
+    <section id="contact"></section>
     
 </body>
 </html>
