--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
-<nav>
-    <!-- Navbar-->
-    <nav id="navbar"></nav>
+<body>
+  <!-- Navbar-->
+  <nav id="navbar">
         <div class="navbar_log">
             <i class="fas fa-atlas"></i>
             <a href="#">SERAN</a>
@@ -31,7 +31,19 @@
                 <li class="navbar_menu_items">Contact</li>
             </ul>  
         </div>  
-    </nav>
+  </nav>
+
+    <!-- Home-->P
+    <section id="home">
+        <img 
+            src="images/profile.png"
+            alt="seran's profile img"
+            class="home_avatar"
+        />
+        <h1 class="home_title">Hello,<br />  I'm GRIT Rans</h1>
+        <h3 class="home_description"> GRIT은 성장(Growth), 회복력(Resilience), 내재적 동기(Intrinsic Motivation), 끈기(Tenacity)의 앞글자를 따서 만든 단어로, 어떤 역경 속에서도 포기 하지 않는 능력을 말합니다. <br /> 저는 GRIT 한 사람입니다.</h3>
+        <button class="home_contact">Contact me</button>
+    </section>
     <!-- About-->
     <section id="about"></section>
     <!-- Skills-->
