--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-  <!-- Navbar-->
-  <nav id="navbar">
+    <!-- Navbar-->
+    <nav id="navbar">
         <div class="navbar_log">
             <i class="fas fa-atlas"></i>
             <a href="#">SERAN</a>
@@ -31,9 +31,9 @@
                 <li class="navbar_menu_items">Contact</li>
             </ul>  
         </div>  
-  </nav>
+    </nav>
 
-    <!-- Home-->P
+    <!-- Home-->
     <section id="home">
         <img 
             src="images/profile.png"
@@ -45,7 +45,59 @@
         <button class="home_contact">Contact me</button>
     </section>
     <!-- About-->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>.....
+           ...... 
+        </p>
+        <div class="about_majors">
+            <div class="major">
+                <div class="maor_icon">
+                    <i class="fab fa-html5"></i>
+                </div>    
+                <div class="major_titel">Front-end</div>
+                <div class="major_description">
+                    HTML, CSS, JavaScript, Vue
+                </div>
+            </div>
+            <div class="major">
+                <div class="maor_icon">
+                    <i class="fab fa-java"></i>
+                </div>    
+                <div class="major_titel">Back-end</div>
+                <div class="major_description">
+                    Java, JavaScript, Spring Boot
+                </div>
+            </div>
+            <div class="major">
+                <div class="maor_icon">
+                    <i class="fas fa-database"></i>
+                </div>    
+                <div class="major_titel">Etc</div>
+                <div class="major_description">
+                    Oracle, Git, GitHub
+                </div>
+            </div>
+        </div>
+        <div class="about_jobs">
+            <div class="job">
+                <img src="images/JK_CO_qlemspt.png" alt="" class="job_logo">
+                <p class="job_name">
+                    Oz-report, eform과 JavaScript를 이용한 전자서식 개발 
+                <p class="job_period">
+                    2021.10.13 ~ 2022.01.31 
+                </p>
+            </div>
+            <div class="job">
+                <img src="images/n_logo.png" alt="" class="job_logo">
+                <p class="job_name">
+                    Web 기반 프로트엔드 개발자 양성과정(NCS) 수료 
+                <p class="job_period">
+                    2021.04.05 ~ 2022.09.13 
+                </p>
+            </div>
+        </div>
+    </section>
     <!-- Skills-->
     <section id="skills"></section>
     <!-- Work-->
