--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>    
                 <div class="major_titel">Front-end</div>
                 <div class="major_description">
-                    HTML, CSS, JavaScript, Vue
+                    HTML, CSS, JavaScript, BootStrap, Vue
                 </div>
             </div>
             <div class="major">
@@ -99,7 +99,83 @@
         </div>
     </section>
     <!-- Skills-->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+            저는 어쩌구 저쩌구 
+        </p>
+        <div class="skillset">
+            <div class="skillset_left">
+                <h3 class="skillset_title">Skills</h3>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>HTML</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill_bar">
+                        <div class="skill_value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>CSS</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill_bar">
+                        <div class="skill_value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>JavaScript</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill_bar">
+                        <div class="skill_value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>BootStrap</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill_bar">
+                        <div class="skill_value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>Vue</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="skill_bar">
+                        <div class="skill_value"></div>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="skillset_right">
+                <div class="tool">
+                    <h3 class="skillset_title">Tools</h3>
+                    <ul class="tools_list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>Eclipse</span></li>
+                        <li><span>Oz-Report/eform</span></li>
+                    </ul>
+
+                </div>
+                <div class="etc">
+                    <h3 class="skillset_title">Etc</h3>
+                    <ul class="etc_list">
+                        <li><span>Git</span></li>
+                        <li><span>...</span></li>
+                        <li><span>Thinking</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Work-->
     <section id="work"></section>
     <!-- Testmoials-->
