--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@
                         <li><span>Eclipse</span></li>
                         <li><span>Oz-Report/eform</span></li>
                     </ul>
-
                 </div>
                 <div class="etc">
                     <h3 class="skillset_title">Etc</h3>
@@ -177,7 +176,49 @@
         </div>
     </section>
     <!-- Work-->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My Work</h1>
+        <h3>Project</h3>
+        <div class="work_categories">
+            <button class="category_btn">
+                All<span class="category_count">6</span>
+            </button>
+            <button class="category_btn">
+                Front-end<span class="category_count">3</span>
+            </button>
+            <button class="category_btn">
+                ack-end<span class="category_count">3</span>
+            </button>
+            <button class="category_btn">
+                Etc<span class="category_count">2</span>
+            </button>
+        </div>
+
+        <div class="work_project">
+            <a 
+            href="https://github.com/fksehf2/SemiProject_05.git"
+            class="project"
+            target="blank"
+            >
+            <img class="project_img" src="images/semi.png" alt="semi">
+            <div class="project_description">
+                <h3>하이클리어!</h3>
+                <span>JavaScript, BootStrap, jsp를 활용한 홈페이지 제작</span>
+            </div>
+        </div>
+        <div class="work_project">
+            <a 
+            href="https://github.com/fksehf2/FinalProject_05.git"
+            class="project"
+            target="blank"
+            >
+            <img class="project_img" src="images/final.png" alt="semi">
+            <div class="project_description">
+                <h3>new 하이클리어!</h3>
+                <span>기존에 제작했던 jsp기반 홈페이지를 spirng과 vue를 활용해 리뉴얼</span>
+            </div>
+        </div>
+    </section>
     <!-- Testmoials-->
     <section id="testmoials"></section>
     <!-- Contact-->
