--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                 <h3>하이클리어!</h3>
                 <span>JavaScript, BootStrap, jsp를 활용한 홈페이지 제작</span>
             </div>
+            </a>
         </div>
         <div class="work_project">
             <a 
@@ -217,12 +218,22 @@
                 <h3>new 하이클리어!</h3>
                 <span>기존에 제작했던 jsp기반 홈페이지를 spirng과 vue를 활용해 리뉴얼</span>
             </div>
+        </a>
         </div>
     </section>
-    <!-- Testmoials-->
-    <section id="testmoials"></section>
     <!-- Contact-->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact_title">Contact me!</h1>
+        <h2 class="contact_email">fkstpdl@gmail.com</h2>
+        <div class="contact_link">
+            <a href="https://github.com/fksehf2">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+        <p class="contact_right">
+            2022 Rans Protfolio - All rights reserved
+        </p>
+    </section>
     
 </body>
 </html>
