--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <p>Paragraph</p>
     <!-- Navbar-->
     <nav id="navbar">
         <div class="navbar_log">
@@ -27,7 +23,7 @@
         </div>
         <div class="navbar_menu">
             <ul class="navbar_menu">
-                <li class="navbar_menu_items">Home</li>
+                <li class="navbar_menu_items active">Home</li>
                 <li class="navbar_menu_items">About</li>
                 <li class="navbar_menu_items">Skills</li>
                 <li class="navbar_menu_items">My Work</li>
