--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
         <button class="home_contact">Contact me</button>
     </section>
     <!-- About-->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
-        <p>.....
-           ...... 
-        </p>
+        <p>..........</p>
         <div class="about_majors">
             <div class="major">
-                <div class="maor_icon">
+                <div class="major_icon">
                     <i class="fab fa-html5"></i>
                 </div>    
                 <div class="major_titel">Front-end</div>
@@ -61,7 +59,7 @@
                 </div>
             </div>
             <div class="major">
-                <div class="maor_icon">
+                <div class="major_icon">
                     <i class="fab fa-java"></i>
                 </div>    
                 <div class="major_titel">Back-end</div>
@@ -70,7 +68,7 @@
                 </div>
             </div>
             <div class="major">
-                <div class="maor_icon">
+                <div class="major_icon">
                     <i class="fas fa-database"></i>
                 </div>    
                 <div class="major_titel">Etc</div>
@@ -81,25 +79,37 @@
         </div>
         <div class="about_jobs">
             <div class="job">
-                <img src="images/JK_CO_qlemspt.png" alt="" class="job_logo">
+                <img src="images/JK_CO_qlemspt.png" 
+                alt="CNB" 
+                class="job_logo"
+                />
+                <div class="job_description">
                 <p class="job_name">
-                    Oz-report, eform과 JavaScript를 이용한 전자서식 개발 
+                    Oz-report, eform과 JavaScript를 이용한 전자서식 개발
+                </p> 
                 <p class="job_period">
                     2021.10.13 ~ 2022.01.31 
-                </p>
+                </p>    
+                </div>
             </div>
             <div class="job">
-                <img src="images/n_logo.png" alt="" class="job_logo">
+                <img src="images/n_logo.png" 
+                alt="acon" 
+                class="job_logo"
+                />
+                <div class="job_description">
                 <p class="job_name">
                     Web 기반 프로트엔드 개발자 양성과정(NCS) 수료 
+                </p>
                 <p class="job_period">
                     2021.04.05 ~ 2022.09.13 
                 </p>
+                </div>
             </div>
         </div>
     </section>
     <!-- Skills-->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
@@ -176,7 +186,7 @@
         </div>
     </section>
     <!-- Work-->
-    <section id="work">
+    <section id="work" class="section"> 
         <h1>My Work</h1>
         <h3>Project</h3>
         <div class="work_categories">
@@ -222,7 +232,7 @@
         </div>
     </section>
     <!-- Contact-->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact_title">Contact me!</h1>
         <h2 class="contact_email">fkstpdl@gmail.com</h2>
         <div class="contact_link">
