--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <button class="home_contact">Contact me</button>
     </section>
     <!-- About-->
-    <section id="about" class="section">
+    <section id="about" class="section section_container">
         <h1>About me</h1>
         <p>..........</p>
         <div class="about_majors">
@@ -108,10 +108,12 @@
             </div>
         </div>
     </section>
+
     <!-- Skills-->
     <section id="skills" class="section">
-        <h1>Skills</h1>
-        <h2>Skills & Attributes</h2>
+        <div class="section_container">
+            <h1>Skills</h1>
+            <h2>Skills & Attributes</h2>
         <p>
             저는 어쩌구 저쩌구 
         </p>
@@ -121,10 +123,10 @@
                 <div class="skill">
                     <div class="skill_description">
                         <span>HTML</span>
-                        <span>80%</span>
+                        <span>90%</span>
                     </div>
                     <div class="skill_bar">
-                        <div class="skill_value"></div>
+                        <div class="skill_value" style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -133,7 +135,7 @@
                         <span>80%</span>
                     </div>
                     <div class="skill_bar">
-                        <div class="skill_value"></div>
+                        <div class="skill_value"style="width: 80%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -142,7 +144,7 @@
                         <span>80%</span>
                     </div>
                     <div class="skill_bar">
-                        <div class="skill_value"></div>
+                        <div class="skill_value" style="width: 80%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -151,7 +153,7 @@
                         <span>80%</span>
                     </div>
                     <div class="skill_bar">
-                        <div class="skill_value"></div>
+                        <div class="skill_value" style="width: 80%;"></div>
                     </div>
                 </div>
                 <div class="skill">
@@ -160,10 +162,9 @@
                         <span>70%</span>
                     </div>
                     <div class="skill_bar">
-                        <div class="skill_value"></div>
+                        <div class="skill_value" style="width: 70%;"></div>
                     </div>
                 </div>
-            </div>
             </div>
             <div class="skillset_right">
                 <div class="tool">
@@ -183,6 +184,7 @@
                     </ul>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <!-- Work-->
