--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 <li class="navbar_menu_items">About</li>
                 <li class="navbar_menu_items">Skills</li>
                 <li class="navbar_menu_items">My Work</li>
-                <li class="navbar_menu_items">Testmonial</li>
                 <li class="navbar_menu_items">Contact</li>
             </ul>  
         </div>  
@@ -54,10 +53,9 @@
                     <i class="fab fa-html5"></i>
                 </div>    
                 <div class="major_titel">Front-end</div>
-                <div class="major_description">
-                    HTML, CSS, JavaScript, BootStrap, Vue
+                <Vue class="major_description">
+                    HTML, CSS, JavaScript, BootStrap,</br> Vue
                 </div>
-            </div>
             <div class="major">
                 <div class="major_icon">
                     <i class="fab fa-java"></i>
@@ -85,7 +83,7 @@
                 />
                 <div class="job_description">
                 <p class="job_name">
-                    Oz-report, eform과 JavaScript를 이용한 전자서식 개발
+                </br>Oz-report, eform과 JavaScript를 이용한 전자서식 개발
                 </p> 
                 <p class="job_period">
                     2021.10.13 ~ 2022.01.31 
@@ -99,7 +97,7 @@
                 />
                 <div class="job_description">
                 <p class="job_name">
-                    Web 기반 프로트엔드 개발자 양성과정(NCS) 수료 
+                </br>Web 기반 프론트엔드 개발자 양성과정(NCS) 수료 
                 </p>
                 <p class="job_period">
                     2021.04.05 ~ 2022.09.13 
@@ -167,7 +165,7 @@
                 </div>
             </div>
             <div class="skillset_right">
-                <div class="tool">
+                <div class="tools">
                     <h3 class="skillset_title">Tools</h3>
                     <ul class="tools_list">
                         <li><span>Visual Studio Code</span></li>
@@ -192,14 +190,14 @@
         <h1>My Work</h1>
         <h3>Project</h3>
         <div class="work_categories">
-            <button class="category_btn">
+            <button class="category_btn active">
                 All<span class="category_count">6</span>
             </button>
             <button class="category_btn">
                 Front-end<span class="category_count">3</span>
             </button>
             <button class="category_btn">
-                ack-end<span class="category_count">3</span>
+                Back-end<span class="category_count">3</span>
             </button>
             <button class="category_btn">
                 Etc<span class="category_count">2</span>
@@ -207,30 +205,28 @@
         </div>
 
         <div class="work_project">
-            <a 
-            href="https://github.com/fksehf2/SemiProject_05.git"
+            <a href="https://github.com/fksehf2/SemiProject_05.git"
             class="project"
             target="blank"
             >
-            <img class="project_img" src="images/semi.png" alt="semi">
+            <img class="project_img" src="images/semi.png" alt="semi"/>
             <div class="project_description">
                 <h3>하이클리어!</h3>
                 <span>JavaScript, BootStrap, jsp를 활용한 홈페이지 제작</span>
             </div>
             </a>
-        </div>
-        <div class="work_project">
             <a 
-            href="https://github.com/fksehf2/FinalProject_05.git"
-            class="project"
-            target="blank"
+                href="https://github.com/fksehf2/FinalProject_05.git"
+                class="project"
+                target="blank"
             >
-            <img class="project_img" src="images/final.png" alt="semi">
+            <img 
+                class="project_img" src="images/final.png" alt="semi">
             <div class="project_description">
                 <h3>new 하이클리어!</h3>
                 <span>기존에 제작했던 jsp기반 홈페이지를 spirng과 vue를 활용해 리뉴얼</span>
             </div>
-        </a>
+            </a>
         </div>
     </section>
     <!-- Contact-->
