--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </div>
         <div class="navbar_menu">
             <ul class="navbar_menu">
-                <li class="navbar_menu_items active">Home</li>
-                <li class="navbar_menu_items">About</li>
-                <li class="navbar_menu_items">Skills</li>
-                <li class="navbar_menu_items">My Work</li>
-                <li class="navbar_menu_items">Contact</li>
+                <li class="navbar_menu_items active" data-link="#home">Home</li>
+                <li class="navbar_menu_items" data-link="#about">About</li>
+                <li class="navbar_menu_items" data-link="#skills">Skills</li>
+                <li class="navbar_menu_items" data-link="#work">My Work</li>
+                <li class="navbar_menu_items" data-link="#contact">Contact</li>
             </ul>  
         </div>  
     </nav>
@@ -230,7 +230,7 @@
         </div>
     </section>
     <!-- Contact-->
-    <section id="contact" class="section">
+    <section id="contact" class="section" data-link="#contact">
         <h1 class="contact_title">Contact me!</h1>
         <h2 class="contact_email">fkstpdl@gmail.com</h2>
         <div class="contact_link">
