--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
     <!-- Home-->
     <section id="home">
-        <img 
+        <div class="home_container">
+            <img 
             src="images/profile.png"
             alt="seran's profile img"
             class="home_avatar"
@@ -42,6 +43,7 @@
         <h1 class="home_title">Hello,<br />  I'm GRIT Rans</h1>
         <h3 class="home_description"> GRIT은 성장(Growth), 회복력(Resilience), 내재적 동기(Intrinsic Motivation), 끈기(Tenacity)의 앞글자를 따서 만든 단어로, 어떤 역경 속에서도 포기 하지 않는 능력을 말합니다. <br /> 저는 GRIT 한 사람입니다.</h3>
         <button class="home_contact">Contact me</button>
+        </div>
     </section>
     <!-- About-->
     <section id="about" class="section section_container">
