--- a/index.html
+++ b/index.html
@@ -192,24 +192,24 @@
         <h1>My Work</h1>
         <h3>Project</h3>
         <div class="work_categories">
-            <button class="category_btn active">
-                All<span class="category_count">6</span>
+            <button class="category_btn active" data-filter="*">
+                All<span class="category_count">7</span>
             </button>
-            <button class="category_btn">
+            <button class="category_btn" data-filter="front-end">
                 Front-end<span class="category_count">3</span>
             </button>
-            <button class="category_btn">
+            <button class="category_btn" data-filter="back-end">
                 Back-end<span class="category_count">3</span>
             </button>
-            <button class="category_btn">
-                Etc<span class="category_count">2</span>
+            <button class="category_btn" data-filter="etc">
+                Etc<span class="category_count">1</span>
             </button>
         </div>
 
-        <div class="work_project">
+        <div class="work_projects">
             <a href="https://github.com/fksehf2/SemiProject_05.git"
             class="project"
-            target="blank"
+            target="blank" data-type="front-end"
             >
             <img class="project_img" src="images/semi.png" alt="semi"/>
             <div class="project_description">
@@ -220,7 +220,7 @@
             <a 
                 href="https://github.com/fksehf2/FinalProject_05.git"
                 class="project"
-                target="blank"
+                target="blank" data-type="back-end"
             >
             <img 
                 class="project_img" src="images/final.png" alt="semi">
@@ -244,5 +244,10 @@
             2022 Rans Protfolio - All rights reserved
         </p>
     </section>
+
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fas fa-arrow-circle-up"></i>
+    </button> 
 </body>
 </html>
