--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.s0">
     <title>Rans Protfolio</title>
+    <meta property="og:image" content="images/home-background.png"> 
     <meta name="description" content="seran's Protfolio">
     <meta name="author" content="seran">
     <link rel="icon" type="images/png" href="images/favicon.png">
@@ -56,7 +57,7 @@
                 <div class="major_icon">
                     <i class="fab fa-html5"></i>
                 </div>    
-                <div class="major_titel">Front-end</div>
+                <div class="major_title">Front-end</div>
                 <Vue class="major_description">
                     HTML, CSS, JavaScript, BootStrap,</br> Vue
                 </div>
@@ -64,7 +65,7 @@
                 <div class="major_icon">
                     <i class="fab fa-java"></i>
                 </div>    
-                <div class="major_titel">Back-end</div>
+                <div class="major_title">Back-end</div>
                 <div class="major_description">
                     Java, JavaScript, Spring Boot
                 </div>
@@ -73,7 +74,7 @@
                 <div class="major_icon">
                     <i class="fas fa-database"></i>
                 </div>    
-                <div class="major_titel">Etc</div>
+                <div class="major_title">Etc</div>
                 <div class="major_description">
                     Oracle, Git, GitHub
                 </div>
