--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="images/home-background.png"> 
     <meta name="description" content="seran's Protfolio">
     <meta name="author" content="seran">
-    <link rel="icon" type="images/png" href="/images/home-background.png">
+    <link rel="icon" type="images/png" href="/images/home-background2.png">
     <script src="https://kit.fontawesome.com/6b1f825215.js" crossorigin="anonymous"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
