--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <!-- Contact-->
     <section id="contact" class="section" data-link="#contact">
         <h1 class="contact_title">Contact me!</h1>
-        <h2 class="contact_email">fkstpdl@gmail.com</h2>
+        <h2 class="contact_email">ransgrit@gmail.com</h2>
         <div class="contact_link">
             <a href="https://github.com/fksehf2">
                 <i class="fab fa-github"></i>
