--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="images/png" href="/images/home-background2.png">
     <script src="https://kit.fontawesome.com/6b1f825215.js" crossorigin="anonymous"></script>
 
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
@@ -37,13 +37,14 @@
 
     <!-- Home-->
     <section id="home">
+        </br>
+        <h1 class="home_title">Hello,<br />  I'm GRIT Rans</h1>
         <div class="home_container">
             <img 
             src="images/profile.png"
             alt="seran's profile img"
             class="home_avatar"
         />
-        <h1 class="home_title">Hello,<br />  I'm GRIT Rans</h1>
         <h3 class="home_description"> GRIT은 성장(Growth), 회복력(Resilience), 내재적 동기(Intrinsic Motivation), 끈기(Tenacity)의 앞글자를 따서 만든 단어로, 어떤 역경 속에서도 포기 하지 않는 능력을 말합니다. <br /> 저는 GRIT 한 사람입니다.</h3>
         <button class="home_contact">Contact me</button>
         </div>
@@ -51,7 +52,9 @@
     <!-- About-->
     <section id="about" class="section section_container">
         <h1>About me</h1>
-        <p>..........</p>
+        <p>저는 웹기반 개발자 양성 과정을 수료하였습니다.   
+            
+        </p>
         <div class="about_majors">
             <div class="major">
                 <div class="major_icon">
@@ -118,7 +121,9 @@
             <h1>Skills</h1>
             <h2>Skills & Attributes</h2>
         <p>
-            저는 어쩌구 저쩌구 
+           저는 기본적인 HTML, CSS, JavaScript, Vue를 사용 할 수 있고 Java, SpringFramework 사용 할 수 있습니다. </br>
+           sql과 git, github를 통한 버전 관리 또한 가능합니다. 
+           학원에서 진행한 2번의 프로젝트 외에 개인 프로젝트를 진행하였으며,</br>부족한 부분은 인터넷 강의를 통하여 계속 보안해 나가고 있습니다.   
         </p>
         <div class="skillset">
             <div class="skillset_left">
@@ -175,6 +180,7 @@
                     <ul class="tools_list">
                         <li><span>Visual Studio Code</span></li>
                         <li><span>Eclipse</span></li>
+                        <li><span>InteliJ IDEA</span></li>
                         <li><span>Oz-Report/eform</span></li>
                     </ul>
                 </div>
@@ -182,7 +188,7 @@
                     <h3 class="skillset_title">Etc</h3>
                     <ul class="etc_list">
                         <li><span>Git</span></li>
-                        <li><span>...</span></li>
+                        <li><span>Tenacity</span></li>
                         <li><span>Thinking</span></li>
                     </ul>
                 </div>
@@ -202,7 +208,7 @@
                 Front-end<span class="category_count">3</span>
             </button>
             <button class="category_btn" data-filter="back-end">
-                Back-end<span class="category_count">3</span>
+                Back-end<span class="category_count">3</span> 
             </button>
             <button class="category_btn" data-filter="etc">
                 Etc<span class="category_count">1</span>
