--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- About-->
     <section id="about" class="section section_container">
         <h1>About me</h1>
-        <p>저는 웹기반 개발자 양성 과정을 수료하였습니다.   
+        <br>저는 에이콘 아카데미에서 웹기반 개발자 양성 과정을 수료하였습니다.</br>html, css, JavaScript, sql 기본과 java, jsp/servlet 스프링 프레임 워크를 공부했습니다.</br>학원에서 진행한 2번의 프로젝트 경험이 있고, 개인적으로 진행한 기본 CRUD 게시판 만들기와 포트폴리오 웹사이트가 있습니다.  
             
         </p>
         <div class="about_majors">
@@ -202,16 +202,16 @@
         <h3>Project</h3>
         <div class="work_categories">
             <button class="category_btn selected" data-filter="*">
-                All<span class="category_count">7</span>
+                All<span class="category_count">4</span>
             </button>
             <button class="category_btn" data-filter="front-end">
-                Front-end<span class="category_count">3</span>
+                Front-end<span class="category_count">2</span>
             </button>
             <button class="category_btn" data-filter="back-end">
-                Back-end<span class="category_count">3</span> 
+                Back-end<span class="category_count">1</span> 
             </button>
             <button class="category_btn" data-filter="etc">
-                Etc<span class="category_count">1</span>
+                Etc<span class="category_count">2</span>
             </button>
         </div>
 
@@ -236,6 +236,50 @@
             <div class="project_description">
                 <h3>new 하이클리어!</h3>
                 <span>기존에 제작했던 jsp기반 홈페이지를 spirng과 vue를 활용해 리뉴얼</span>
+            </div>
+            </a>
+            <a 
+            class="project"
+            target="blank" data-type="etc"
+            >
+            <img 
+                class="project_img" src="images/oz3.jpeg" alt="semi">
+            <div class="project_description">
+                <h3>oz-eform 작업 </h3>
+                <span>자바스크립트 기반 전자 문서 서식 작업</span>
+            </div>
+            </a>
+            <a 
+            class="project"
+            target="blank" data-type="etc"
+            >
+            <img 
+                class="project_img" src="images/oz2.png" alt="semi">
+            <div class="project_description">
+                <h3>oz-eform 작업 </h3>
+                <span>자바스크립트 기반 전자 문서 서식 작업</span>
+            </div>
+            </a>
+            <a 
+            class="project"
+            target="blank" data-type="etc"
+            >
+            <img 
+                class="project_img" src="images/oz4.png" alt="semi">
+            <div class="project_description">
+                <h3>oz-eform 스크립트 </h3>
+                <span>품목을 추가하는 버튼을 만드는 스크립트 작업</span>
+            </div>
+            </a>
+            <a 
+            class="project"
+            target="blank" data-type="etc"
+            >
+            <img 
+                class="project_img" src="images/oz5.png" alt="semi">
+            <div class="project_description">
+                <h3>oz-eform 스크립트 </h3>
+                <span>포커스가 가면 입력된 내용 삭제하는 스크립트</span>
             </div>
             </a>
         </div>
